tests/baselines/reference/TupleType6.errors.txt
TupleType6.ts(1,16): error TS1110: Type expected.


==== TupleType6.ts (1 errors) ====
    var v: [number,,]
                   ~
!!! error TS1110: Type expected.